SSDA1/src/EG2.java
/* Generated By:JavaCC: Do not edit this line. EG2.java */
import java.util.Collection;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;
public class EG2 implements EG2Constants {
  static String x1,x2,x3,x4,x10,x6,x11,x15;
  static ArrayList<String> x5 = new ArrayList<String>();
   static ArrayList<String> x7 = new ArrayList<String>();
   static ArrayList<String> x8 = new ArrayList<String>();
   static ArrayList<String> x18 = new ArrayList<String>();
 static int n,x;

  public EG2() {

  }
 public static String getid() {
   return x1;
}
public static String getagent() {
   return x2;
}
 public static String getverb() {
   return x3;
}
public static String getop() {
   return x4;
}
public static ArrayList getobj() {

   return x5;
}
public static String getcondition() {

   return x10;
}
 public static String getopMode() {

   return x6;
}
public static ArrayList getstakeholders() {

   return x7;
}
public static ArrayList getparameters() {

   return x8;
}
public static String getvalue() {

   return x11;
}
public static String geteffect() {

   return x15;
}
public static ArrayList gets() {

   return x18;
}

  static final public int start() throws ParseException {
    wff();
    {if (true) return 0;}  // returns 0 on successful parse

    throw new Error("Missing return statement in function");
  }

  static final public void wff() throws ParseException {
    x5.clear();x7.clear(); x8.clear();x18.clear();x10=null;
    event();
  }

  static final public void event() throws ParseException {
 Token a;
    a = jj_consume_token(ID);
 x1=a.toString();
 System.out.println("ID: "+ a);
    jj_consume_token(21);
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(22);
      action();
    }
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(22);
      condition();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 22:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_3;
      }
      effect();
    }
    jj_consume_token(23);
  }

  static final public void action() throws ParseException {
 Token b,c,d,e,f,i,s,g;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 24:
    case 25:
    case 26:
    case 27:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        jj_consume_token(24);
        break;
      case 25:
        jj_consume_token(25);
        break;
      case 26:
        jj_consume_token(26);
        break;
      case 27:
        jj_consume_token(27);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    b = jj_consume_token(AGENT);
  x2=b.toString();
  System.out.println("AGENT: "+ b);
    if (jj_2_3(2)) {
      jj_consume_token(22);
      c = jj_consume_token(VERB);
 x3=c.toString();
  System.out.println("VERB: "+ c);
    } else {
      ;
    }
    if (jj_2_4(2)) {
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 28:
        jj_consume_token(28);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      d = jj_consume_token(OpMode);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        jj_consume_token(29);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
 x6=d.toString();
  System.out.println("OpMode: "+ d);
    } else {
      ;
    }
    jj_consume_token(22);
    e = jj_consume_token(OPERATION);
 x4=e.toString();
  System.out.println("OPERATION: "+ e);
    jj_consume_token(22);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 24:
    case 25:
    case 26:
    case 30:
    case 31:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        jj_consume_token(24);
        break;
      case 25:
        jj_consume_token(25);
        break;
      case 26:
        jj_consume_token(26);
        break;
      case 30:
        jj_consume_token(30);
        break;
      case 31:
        jj_consume_token(31);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
      jj_consume_token(32);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    f = jj_consume_token(OBJECT);
 x5.add(f.toString());

  System.out.println("OBJECT: "+ f);
    label_4:
    while (true) {
      if (jj_2_5(4)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
      case 25:
      case 26:
      case 30:
      case 31:
      case 33:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 24:
          jj_consume_token(24);
          break;
        case 25:
          jj_consume_token(25);
          break;
        case 26:
          jj_consume_token(26);
          break;
        case 31:
          jj_consume_token(31);
          break;
        case 30:
          jj_consume_token(30);
          break;
        case 33:
          jj_consume_token(33);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
        jj_consume_token(25);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      i = jj_consume_token(OBJECT);
 x5.add(i.toString());

  System.out.println("OBJECT: "+ i);
    }
    label_5:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_5;
      }
      stakeholders();
    }
    label_6:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 34:
        jj_consume_token(34);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      parameter();
    }
  }

  static final public void condition() throws ParseException {
 Token z,b,c,d,e,f;
    z = jj_consume_token(CONDITION);
  x10=z.toString();
  System.out.println("CONDITION: "+ z);
    label_7:
    while (true) {
      if (jj_2_8(3)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
      case 25:
      case 26:
      case 35:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 24:
          jj_consume_token(24);
          break;
        case 25:
          jj_consume_token(25);
          break;
        case 26:
          jj_consume_token(26);
          break;
        case 35:
          jj_consume_token(35);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      b = jj_consume_token(AGENT);
 x2=b.toString();
  System.out.println("AGENT: "+ b);
    }
    if (jj_2_9(2)) {
      jj_consume_token(22);
      c = jj_consume_token(VERB);
  x3=c.toString();
  System.out.println("VERB: "+ c);
    } else {
      ;
    }
    if (jj_2_10(2)) {
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 28:
        jj_consume_token(28);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      d = jj_consume_token(OpMode);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        jj_consume_token(29);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
 x6=d.toString();
  System.out.println("OpMode: "+ d);
    } else {
      ;
    }
    label_8:
    while (true) {
      if (jj_2_11(2)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(22);
      e = jj_consume_token(OPERATION);
 x4=e.toString();
System.out.println("OPERATION: "+ e);
    }
    label_9:
    while (true) {
      if (jj_2_12(2)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
      case 25:
      case 26:
      case 30:
      case 31:
      case 36:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 24:
          jj_consume_token(24);
          break;
        case 25:
          jj_consume_token(25);
          break;
        case 26:
          jj_consume_token(26);
          break;
        case 30:
          jj_consume_token(30);
          break;
        case 31:
          jj_consume_token(31);
          break;
        case 36:
          jj_consume_token(36);
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      f = jj_consume_token(OBJECT);
  x5.add(f.toString());

System.out.println("OBJECT: "+ f);
    }
    label_10:
    while (true) {
      if (jj_2_13(2)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
      case 25:
      case 26:
      case 30:
      case 31:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 24:
          jj_consume_token(24);
          break;
        case 25:
          jj_consume_token(25);
          break;
        case 26:
          jj_consume_token(26);
          break;
        case 30:
          jj_consume_token(30);
          break;
        case 31:
          jj_consume_token(31);
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      f = jj_consume_token(OBJECT);
 x5.add(f.toString());

System.out.println("OBJECT: "+ f);
    }
    label_11:
    while (true) {
      if (jj_2_14(2)) {
        ;
      } else {
        break label_11;
      }
      status();
      label_12:
      while (true) {
        if (jj_2_15(3)) {
          ;
        } else {
          break label_12;
        }
        jj_consume_token(22);
        z = jj_consume_token(Conj);
        status();
      }
    }
    label_13:
    while (true) {
      if (jj_2_16(2)) {
        ;
      } else {
        break label_13;
      }
      jj_consume_token(22);
      z = jj_consume_token(VALUE);
  x11=z.toString();
 System.out.println("VALUE: "+ z);
    }
  }

  static final public void effect() throws ParseException {
 Token y,i;
    jj_consume_token(22);
    y = jj_consume_token(EFFECT);
 x15=y.toString();
  System.out.println("EFFECT: "+ y);
    label_14:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_14;
      }
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
      case 25:
      case 26:
      case 30:
      case 31:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 24:
          jj_consume_token(24);
          break;
        case 25:
          jj_consume_token(25);
          break;
        case 26:
          jj_consume_token(26);
          break;
        case 31:
          jj_consume_token(31);
          break;
        case 30:
          jj_consume_token(30);
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      i = jj_consume_token(OBJECT);
 x5.add(i.toString());
System.out.println("OBJECT: "+ i);
    }
    label_15:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_15;
      }
      status();
    }
  }

  static final public void stakeholders() throws ParseException {
 Token s=null;String s1 = "";int i=0;
    jj_consume_token(22);
    s = jj_consume_token(STAKEHOLDERS);
 s1 = s.toString();
String[] words = { "users", "application","customer","admin"};
for (String word : words) {
int loc = s1.indexOf(word);
while (loc != -1) {
   i=loc;
   loc = s1.indexOf(word, loc + 1); } }

   s1=s1.substring(i);
   x7.add(s1.toString());
   System.out.println("STAKEHOLDERS: "+ s1);
  }

  static final public void parameter() throws ParseException {
 Token p,j,z;
    p = jj_consume_token(Parameter);
 x8.add(p.toString());System.out.println("Parameters: "+ p);
    label_16:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_16;
      }
      jj_consume_token(22);
      z = jj_consume_token(Conj);
      jj_consume_token(22);
      j = jj_consume_token(Parameter);
 x8.add(j.toString());System.out.println("Parameters: "+ j);
    }
  }

  static final public void status() throws ParseException {
 Token h;
    jj_consume_token(22);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 37:
      jj_consume_token(37);
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    h = jj_consume_token(STATUS);
 x18.add(h.toString());
  System.out.println("STATUS: "+ h);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_3_6() {
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(31)) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(33)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(22)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(22)) return true;
    if (jj_scan_token(STAKEHOLDERS)) return true;
    return false;
  }

  static private boolean jj_3_12() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_23()) jj_scanpos = xsp;
    if (jj_scan_token(OBJECT)) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(25)) jj_scanpos = xsp;
    if (jj_scan_token(OBJECT)) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_scan_token(22)) return true;
    if (jj_scan_token(OPERATION)) return true;
    return false;
  }

  static private boolean jj_3_18() {
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(31)) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(28)) jj_scanpos = xsp;
    if (jj_scan_token(OpMode)) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(37)) jj_scanpos = xsp;
    if (jj_scan_token(STATUS)) return true;
    return false;
  }

  static private boolean jj_3_17() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_26()) jj_scanpos = xsp;
    if (jj_scan_token(OBJECT)) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_scan_token(22)) return true;
    if (jj_scan_token(VERB)) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(35)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(28)) jj_scanpos = xsp;
    if (jj_scan_token(OpMode)) return true;
    return false;
  }

  static private boolean jj_3_19() {
    if (jj_scan_token(22)) return true;
    if (jj_scan_token(Conj)) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_22()) jj_scanpos = xsp;
    if (jj_scan_token(AGENT)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(22)) return true;
    if (jj_scan_token(VERB)) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(Parameter)) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(27)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_17() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_27()) jj_scanpos = xsp;
    if (jj_scan_token(AGENT)) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_scan_token(22)) return true;
    if (jj_scan_token(VALUE)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(CONDITION)) return true;
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_scan_token(22)) return true;
    if (jj_scan_token(Conj)) return true;
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(31)) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(34)) jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(31)) {
    jj_scanpos = xsp;
    if (jj_scan_token(36)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(22)) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_13() {
    if (jj_scan_token(22)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_24()) jj_scanpos = xsp;
    if (jj_scan_token(OBJECT)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public EG2TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[23];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x400000,0xf000000,0xf000000,0x10000000,0x20000000,0xc7000000,0xc7000000,0x0,0xc7000000,0xc7000000,0x2000000,0x0,0x7000000,0x7000000,0x10000000,0x20000000,0xc7000000,0xc7000000,0xc7000000,0xc7000000,0xc7000000,0xc7000000,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x1,0x2,0x2,0x0,0x4,0x8,0x8,0x0,0x0,0x10,0x10,0x0,0x0,0x0,0x0,0x20,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[19];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public EG2(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public EG2(java.io.InputStream stream, String encoding) {
